# agraph-examples

./: .gitignore  README-original.md  README.md
.github/: dependabot.yml
agvector/: AGVector-cloud-example.ipynb  AGVector-example.ipynb  GraphRAG-Embedding-with-Properties.ipynb  README.md  chomsky.nq.tgz  contract.def  contract.nt  create-environment.sh  llm_utils.py  philosophy.def  requirements.txt
ansible/: Makefile  README.md  agraph.cfg-template  agraph.init  agraph.yaml  ansible.md  clean-install.yaml  install.yaml  inventory.txt  make-agraph.cfg  start.yaml  stop.yaml  vars.yaml
clustering/: README.md
databricks/: README.md  demo.mapping.obda  demo.properties
geodemo/: PhoneCalls.ttl  generating-phonecalls.cl  geodemo.cl  geodemo.md
geosparql/: README.md  environment.yml  geosparql-examples.ipynb  geosparql-tutorial.ipynb  requirements.txt
gnn/: Events2018.ipynb
grafana/: README.md
gruff/: embedding.html  readme.md
java-http-sessions/: Makefile  Readme.txt
llm/: README.md  environment.yml  llm_utils.py  nlq.ipynb  ollama-sparql-integration.ipynb  requirements.txt
ontop/: Dockerfile.bootstrap  Dockerfile.endpoint  Dockerfile.materialize  Dockerfile.pg  README.md
prometheus/: README.md  agraph.json  agraph.yml
spark/: AGSpark.ipynb  Makefile  README.md
streaming/kafka/: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
streaming/kafka/streaming/: agent.py  cli.py  init_repo.py  model.py  producer.py
streaming/kafka/streaming/data/: data.nt.bz2  sample_posts_idx.txt.bz2  sample_users_idx.txt.bz2
(+86 files in other folders)
